feature: update account endpoint
