# src/main/java/com/project1/ms_account_service/exception/GlobalExceptionHandler.java
@@ -58,4 +58,12 @@ public class GlobalExceptionHandler {
         return Mono.just(ResponseEntity.status(HttpStatus.BAD_REQUEST)
                 .body(responseBase));
     }
+
+    @ExceptionHandler(AccountNotFoundException.class)
+    public Mono<ResponseEntity<ResponseBase>> handleAccountNotFoundException(Exception ex) {
+        ResponseBase responseBase = new ResponseBase();
+        responseBase.setMessage(ex.getMessage());
+        return Mono.just(ResponseEntity.status(HttpStatus.NOT_FOUND)
+                .body(responseBase));
+    }
 }
